added category domain class & jsp loop

--- a/web/style/style.css
+++ b/web/style/style.css
@@ -97,7 +97,7 @@ a {
 	display: block;
 }
 
-.ms-categories ul li a:hover {
+.ms-categories ul li a {
 
 	background-color: #447aa7;
 	color: #ffffff;
