--- a/web/style/style.css
+++ b/web/style/style.css
@@ -3,15 +3,40 @@
     src: url('source-sans-pro-regular.ttf');
 }
 
+@font-face {
+    font-family: sourcesanspro;
+    src: url('source-sans-pro-semibold.ttf');
+    font-weight: bold;
+}
+
+@font-face {
+    font-family: sourcesanspro;
+    src: url('source-sans-pro-light.ttf');
+    font-weight: 100;
+}
+
 body {
 
 	font-family: sourcesanspro;
+    background: #F9F9F9;
 }
 
 a {
 
 	color: #000000;
 	text-decoration: none;
+}
+
+h1, h2 {
+
+    font-family: sourcesanspro;
+    font-size: 24pt;
+    font-weight: 100;
+}
+
+h1 {
+
+    font-size: 34pt;
 }
 
 .ms-header {
@@ -22,7 +47,7 @@ a {
 	right: 0;
 	height: 50px;
 	background-color: #ffffff;
-	box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1);
+	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.03);
 	z-index: 5000;
 }
 .ms-header ul {
@@ -31,7 +56,7 @@ a {
 	margin: 0;
 	padding: 0;
 
-	max-width: 1200px;
+	max-width: 1000px;
 	margin: 0 auto;
 
 }
@@ -44,7 +69,7 @@ a {
 .ms-header li a {
 	line-height: 50px;
 	height: 50px;
-	padding: 0px 10px;
+	padding: 0px 20px;
 	display: inline-block;
 }
 
@@ -53,10 +78,24 @@ a {
 	float: right;
 }
 
+.ms-header li.left {
+
+    float: left;
+}
+
 .ms-header li a:hover, .ms-menu-active {
 
-	background-color: #447aa7;
-	color: #ffffff;
+	color: #3D8DCD;
+}
+
+.ms-header li a.ms-logo {
+
+    background: url('/images/logo.png');
+    background-size: contain;
+    display: block;
+    width: 50px;
+    line-height: 50px;
+    padding: 0;
 }
 
 /*			Categories dropdown menu			*/
@@ -66,7 +105,7 @@ a {
 	top: 50px;
 	left: 0;
 	right: 0;
-	max-width: 1200px;
+	max-width: 1000px;
 	margin: 0 auto;
 	z-index: 9000;
 }
@@ -105,5 +144,75 @@ a {
 
 .ms-content {
 
-	margin-top: 50px;
+    max-width: 1000px;
+    margin: 75px auto 0 auto;
+}
+
+.ms-products {
+
+    width: 1020px;
+}
+
+.ms-product {
+    width: 190px;
+    padding: 12px 17px;
+    float: left;
+    background-color: #ffffff;
+    margin: 15px 30px 15px 0px;
+
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.03);
+}
+
+.ms-product .ms-product-thumbnail {
+
+    max-width: 100%;
+    max-height: 150px;
+    display: block;
+    margin: 0 auto 5px auto;
+}
+
+.ms-product .ms-product-title {
+
+    font-weight: bold;
+}
+
+.ms-product .ms-product-description {
+
+}
+
+.ms-product .ms-product-actions {
+
+    padding-top: 15px;
+}
+
+.ms-product .ms-product-actions .ms-product-info {
+
+    float: left;
+}
+
+.ms-product .ms-product-actions .ms-product-info > span {
+
+    display: block;
+}
+
+.ms-product .ms-product-actions .ms-product-cart-button {
+
+    float: right;
+    line-height: 30px;
+
+    background-color: #3D8DCD;
+    padding: 0px 5px;
+    color: #ffffff;
+    margin-top: 5px;
+
+    cursor: pointer;
+}
+
+.ms-product .ms-product-actions .ms-product-cart-button:hover {
+
+    background-color: #48a6f2;
+}
+
+.ms-clear {
+    clear: both;
 }
