--- a/web/style/style.css
+++ b/web/style/style.css
@@ -195,9 +195,38 @@ h1 {
     display: block;
 }
 
-.ms-product .ms-product-actions .ms-product-cart-button {
+.ms-product .ms-product-actions .ms-product-cart {
 
     float: right;
+}
+
+.ms-product .ms-product-actions .ms-product-cart .ms-product-cart-amount {
+
+    width: 25px;
+    height: 26px;
+    border: 1px solid #3d8cce;
+
+    border-right: 0;
+
+    text-align: center;
+
+    position: relative;
+    top: -1px;
+    left: 4px;
+
+    outline: none;
+}
+
+.ms-product .ms-product-actions .ms-product-cart .ms-product-cart-amount:hover,
+.ms-product .ms-product-actions .ms-product-cart .ms-product-cart-amount:focus {
+
+    border-color: #48a6f2;
+}
+
+.ms-product .ms-product-actions .ms-product-cart .ms-product-cart-button {
+
+    display: inline-block;
+
     line-height: 30px;
 
     background-color: #3D8DCD;
@@ -208,7 +237,7 @@ h1 {
     cursor: pointer;
 }
 
-.ms-product .ms-product-actions .ms-product-cart-button:hover {
+.ms-product .ms-product-actions .ms-product-cart-button:hover{
 
     background-color: #48a6f2;
 }
