--- a/web/style/style.css
+++ b/web/style/style.css
@@ -99,6 +99,12 @@ h1 {
     padding: 0;
 }
 
+.ms-link {
+
+    color: #636363;
+    display: block;
+}
+
 .ms-button {
     display: inline-block;
 
@@ -108,6 +114,9 @@ h1 {
     padding: 0px 5px;
     color: #ffffff;
     cursor: pointer;
+
+    outline: none;
+    border: none;
 }
 
 .ms-button:hover{
@@ -436,3 +445,13 @@ h1 {
 
     display: inline-block;
 }
+
+input[type=text], input[type=password] {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+}
+
